--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
       <div class="col-lg-4 col-md-6 col-12">
         <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
-            <h1 class="text-center text-white">Watch</h1>
+            <h1 class="magic">Watch</h1>
             <img id="watch-img" src="images/categories/watch.png" alt="">
         </div>
       </div>
@@ -169,7 +169,7 @@
       
       <div class="col-lg-4 col-md-6 col-12">
         <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
-            <h1 class="text-center text-white">Shoe</h1>
+            <h1 class="magic">Shoe</h1>
             <img id="shoe-img" src="images/categories/shoes.png" alt="">
         </div>
       </div>
@@ -177,7 +177,7 @@
       
       <div class="col-lg-4 col-md-6 col-12">
         <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
-            <h1 class="text-center text-white">Bag</h1>
+            <h1 class="magic">Bag</h1>
             <img id="bag-img" src="images/categories/bag.png" alt="">
         </div>
       </div>
@@ -248,7 +248,7 @@
 <section> 
   <div id="backpack" class="container mt-5 p-5">
 
-    <h1>Bags</h1>
+    <h1>BagPack</h1>
   
     <div class="row row-cols-1 row-cols-md-3 g-4">
   
@@ -306,11 +306,11 @@
   <div>
     <h1>LET'S STAY IN TOUCH</h1>
    <p>Get updates on sales, specials and more.</p>
-   <input class="form-control" type="text" placeholder="Your Email" 
+   <input id="email-word" class="form-control" type="text" placeholder="Please type ' email '" 
    style="width: 70%; height: 40px; border: none;">
    <br>
    
-   <button onclick="changeSubscribe()" class="btn btn-danger">
+   <button onclick="changeSubscribe()" id="submit-btn" class="btn btn-danger" disabled>
      Submit
    </button>
    </div>
